--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^4.11.0",
     "next": "^12.3.4",
     "next-auth": "^4.20.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.0"
