Prettier: Set print width to 100
Update prettier config to have a print width of 100 characters and run prettier on it

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier ./**/*.ts -w && prettier ./**/*.tsx -w"
+    "prettier": "prettier {lib,styles}/**/*.ts {components,pages}/**/*.tsx -w"
   },
   "keywords": [],
   "author": "",
